@@ -2,6 +2,8 @@ package co.edu.uptc.parking.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,27 +18,37 @@ public class SpaceService {
 
     @Autowired
     private SpaceRepo spaceRepo;
+    
+    @Autowired
+    private SpaceMapper spaceMapper;
 
     public SpaceDTO createSpace(Long parkingId) {
-        long spaceCount = spaceRepo.findAll().stream()
-                .filter(space -> space.getParkingId().equals(parkingId))
-                .count();
+        List<Space> existingSpaces = spaceRepo.findByParkingId(parkingId);
+        long spaceCount = existingSpaces.size();
+        
+        String spaceNumber = "SPACE-" + parkingId + "-" + (spaceCount + 1) + "-" + UUID.randomUUID().toString().substring(0, 8);
         
         Space newSpace = new Space();
         newSpace.setParkingId(parkingId);
-        newSpace.setSpaceNumber("SPACE-" + parkingId + "-" + (spaceCount + 1));
+        newSpace.setSpaceNumber(spaceNumber);
         newSpace.setStatus("AVAILABLE");
         
         Space savedSpace = spaceRepo.save(newSpace);
-        return SpaceMapper.INSTANCE.toDTO(savedSpace);
+        return spaceMapper.toDTO(savedSpace);
+    }
+
+    public List<SpaceDTO> getSpaces() {
+        List<Space> spaces = spaceRepo.findAll();
+        return spaces.stream()
+                .map(spaceMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     public List<SpaceDTO> getSpacesByParkingId(Long parkingId) {
-        List<Space> spaces = spaceRepo.findAll();
+        List<Space> spaces = spaceRepo.findByParkingId(parkingId);
         return spaces.stream()
-                .filter(space -> space.getParkingId().equals(parkingId))
-                .map(SpaceMapper.INSTANCE::toDTO)
-                .toList();
+                .map(spaceMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     public boolean updateSpaceStatus(Long spaceId, String status) {
